Added blurb to About page

--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,11 @@
 <div class='container'>
     <div class='page-header'>
-        <h1>Ivory Hacks</h1>
-        <h2> About Page</h2>
+        <h1>About</h1>
     </div>
+
+    <div>
+        <p>Ivory Hacks is Rose-Hulman Institute of Technology's first annual 36-hour hackathon. On the weekend of April 17, we're bringing together 500 college students from all skill levels and backgrounds to get their hands dirty using technology and design, and connect with peers and professionals. At the end of the event, the participants demonstrate their projects to fellow hackers, visitors, and a panel of judges.</p>
+
+        <p>We can't wait to see what you will create!</p>
+    </div>
+</div>
