--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -1,5 +1,7 @@
 <div class='container'>
     <div class='page-header'>
-        <h1>Ivory Hacks</h1>
-        <h2>Sponsors</h2>
+        <h1>Sponsors</h1>
     </div>
+
+    <div>Interested in sponsoring Ivory Hacks? <a href="#">Click here for our sponsorship document</a></div>
+</div>
