--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -3,5 +3,5 @@
         <h1>Sponsors</h1>
     </div>
 
-    <div>Interested in sponsoring Ivory Hacks? <a href="#">Click here for our sponsorship document</a></div>
+    <div>Interested in sponsoring Ivory Hacks? Contact us at ivoryhacks@rose-hulman.edu, and don't forget to <a href="#">click here for our sponsorship document!</a></div>
 </div>
