--- a/views/about.html
+++ b/views/about.html
@@ -1,9 +1,10 @@
 <div class="" id="about">
     <div class="layer1 screen"></div>
-    <div class="layer2">
-        <h1>What is Ivory Hacks?</h1>
-        <br>
-        <p>Ivory Hacks is Rose-Hulman Institute of Technology's first annual 36-hour hackathon. On the weekend of April 17, we're bringing together 500 college students from all skill levels and backgrounds to get their hands dirty using technology and design, and connect with peers and professionals. At the end of the event, the participants demonstrate their projects to fellow hackers, visitors, and a panel of judges.</p>
-
+    <div class="layer2 ui centered grid">
+        <div class="ten wide tablet eight wide computer column">
+            <h1>What is Ivory Hacks?</h1>
+            <br>
+            <p>Ivory Hacks is Rose-Hulman Institute of Technology's first annual 36-hour hackathon. On the weekend of April 17, we're bringing together 500 college students from all skill levels and backgrounds to get their hands dirty using technology and design, and connect with peers and professionals. At the end of the event, the participants demonstrate their projects to fellow hackers, visitors, and a panel of judges.</p>
+        </div>
     </div>
 </div>
