added a schedule page

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -157,3 +157,29 @@ top: 103vh;
    padding: .715em .715em .715em 0;
    margin-right:.5em;
 }
+
+#schedule {
+    background-color: #A7BCD6;
+    width: 100%;
+    height: 100vh;
+}
+
+#schedule .layer2 {
+    top: 330vh;
+    color: #FFFFFF;
+}
+
+#schedule h1 {
+    padding: 2.5em 0;
+}
+
+#schedule .column h2 {
+    text-align: center;
+}
+
+#schedule .column {
+    height: 70vh;
+    background-color: #a7bcd6;
+    padding: auto 0;
+    margin: auto 10px;
+}
