--- a/views/when-and-where.html
+++ b/views/when-and-where.html
@@ -14,7 +14,7 @@
                             </tr>
                             <tr>
                                 <td><h2>Ends: </h2></td>
-                                <td><h3> Sunday, April 17 (4:00pm Check-In))</h3></td>
+                                <td><h3> Sunday, April 17 (4:00pm Closing Ceremony))</h3></td>
                             </tr>
                         </table>
                        <h3><a href="#schedule">Detailed Schedule</a></h3>
