Added pages for Sponsors and FAQs. I'm also experimenting with a different style to underline headers.

--- a/views/about.html
+++ b/views/about.html
@@ -1,7 +1,8 @@
-<div class="" id="about" class="section">
+<div id="about" class="section">
     <div class="layer2 ui centered grid">
         <div id="inner-about" class="ten wide tablet eight wide computer column">
             <h1>What is Ivory Hacks?</h1>
+            <div id="heading-underline"></div>
             <br>
             <p>Ivory Hacks is Rose-Hulman Institute of Technology's first annual 36-hour hackathon. On the weekend of April 17, we're bringing together 500 college students from all skill levels and backgrounds to get their hands dirty using technology and design, and connect with peers and professionals. At the end of the event, the participants demonstrate their projects to fellow hackers, visitors, and a panel of judges.</p>
         </div>
