--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -1,7 +1,11 @@
-<div class='container'>
-    <div class='page-header'>
-        <h1>Sponsors</h1>
+<div id="sponsors" class="section">
+    <div class="layer2 ui centered grid">
+        <div id="inner-about" class="ten wide tablet eight wide computer column">
+            <h1>Sponsors</h1>
+            <div id="heading-underline"></div>
+            <br>
+            <p>Interested in sponsoring Ivory Hacks? Contact sponsors@ivoryhacks.io!</p>
+        </div>
     </div>
-
-    <div>Interested in sponsoring Ivory Hacks? Contact us at ivoryhacks@rose-hulman.edu, and don't forget to <a href="#">click here for our sponsorship document!</a></div>
+    <script>$('#sponsors').height(Math.max($('#sponsors .layer2').height(), $('#sponsors').height()));</script>
 </div>
