--- a/src/css/index.css
+++ b/src/css/index.css
@@ -87,7 +87,9 @@
 
 /*--------------------About ----------------------------------*/
 #about {
-    background-color: #4f7588;
+    /*background-color: #4f7588;*/
+    padding: 2em;
+    background: url('/images/random_grey_variations_@2X.png') repeat center center ;
 }
 
 #about .layer2 {
@@ -97,9 +99,14 @@
 
 /*--------------------Challenges ----------------------------------*/
 #challenges {
-    background-color: #A7BCD6;
+    /*background-color: #A7BCD6;*/
     width: 100%;
     min-height: 100vh;
+    background: url('/images/RHIT_Self_Made_Man-10.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 #challenges .layer2 {
@@ -117,7 +124,7 @@
 
 #challenges .column {
     height: 70vh;
-    background-color: #a7bcd6;
+    /*background-color: #a7bcd6;*/
     padding: auto 0;
     margin: 10px;
 }
@@ -162,9 +169,16 @@
 
 /*-------------------- Schedule ----------------------------------*/
 #schedule {
-    background-color: #A7BCD6;
+    /*background-color: #A7BCD6;*/
     width: 100%;
     min-height: 100vh;
+    /*z-index: 50;*/
+    background: url('/images/congruent_outline.png') repeat center center ;
+    /*-webkit-background-size: cover;*/
+    /*-moz-background-size: cover;*/
+    /*-o-background-size: cover;*/
+    /*background-size: cover;*/
+    /*height: 100vh;*/
 }
 
 #schedule .layer2 {
@@ -181,7 +195,37 @@
 
 #schedule .column {
     height: 70vh;
-    background-color: #a7bcd6;
+    /*background-color: #a7bcd6;*/
     padding: auto 0;
     margin: 10px;
+}
+
+/*---------- Sponsors -------------- */
+#sponsors {
+    /*background-color: #A7BCD6;*/
+    width: 100%;
+    min-height: 100vh;
+    background: url('/images/White-Chapel.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+/*---------- Map -------------- */
+#map iframe {
+    width: 100vw;
+}
+
+/*---------- Sponsors -------------- */
+#faq {
+    /*background-color: #A7BCD6;*/
+    padding: 2em;
+    width: 100%;
+    min-height: 100vh;
+    background: url('/images/escheresque_ste_@2X.png') repeat center center fixed;
+    /*-webkit-background-size: cover;*/
+    /*-moz-background-size: cover;*/
+    /*-o-background-size: cover;*/
+    /*background-size: cover;*/
 }
