--- a/views/faq.html
+++ b/views/faq.html
@@ -1,7 +1,7 @@
-<div class='container' id="sponsors">
+<div class='container' id="faq">
     <div class="layer2 ">
-        <h1 style="text-align: center">Sponsors</h1>
-        <div class="ui container"><h3>Interested in sponsoring Ivory Hacks? Contact us at ivoryhacks@rose-hulman.edu, and don't forget to <a href="#">explore our sponsorship Perks!</a></h3></div>
+        <h1 style="text-align: center">FAQs</h1>
+        <!--<div class="ui container"><h3>Interested in sponsoring Ivory Hacks? Contact us at ivoryhacks@rose-hulman.edu, and don't forget to <a href="#">explore our sponsorship Perks!</a></h3></div>-->
         <div class="ui centered grid">
             <div class="twelve wide tablet five wide computer column">
                 <!--<h2>Friday</h2>-->
@@ -21,5 +21,5 @@
 </div>
 
 <script>
-    $('#sponsors').height(Math.max($('#sponsors .layer2').height(), $('#sponsors').height()));
+    $('#faq').height(Math.max($('#faq .layer2').height(), $('#faq').height()));
 </script>
