--- a/views/faqs.html
+++ b/views/faqs.html
@@ -4,7 +4,120 @@
             <h1>FAQS</h1>
             <div id="heading-underline"></div>
             <br>
-            <p>Put FAQs Here!</p>
+            <div class="ui two cards">
+                <div class="card">
+                    <div class="content">
+                        <div class="header">What is a hackathon?</div>
+                        <div class="description">
+                            A hackathon is weekend-long event that brings together students to build something cool. We provide the resources for you to succeed, no matter your skill level!
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">Who can attend?</div>
+                        <div class="description">
+                            Ivory Hacks is open to any undergraduate college college student. Must be at least 18 years old (so unfortunately, high school hackers can't attend).
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">Do I need to know how to code?</div>
+                        <div class="description">
+                            Nope! In fact, Ivory Hacks was designed to be super beginner friendly! (TODO: More info here)
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">I'm a first time hacker!</div>
+                        <div class="description">
+                            Awesome! You're the perfect hacker for the Beginner's Challenge (TODO: More info here)
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">Is it free?</div>
+                        <div class="description">
+                            Yup. $0. Just come and build cool stuff!
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">What should I bring?</div>
+                        <div class="description">
+                            Hackathons are pretty awesome!
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">How will I get there?</div>
+                        <div class="description">
+                            Hackathons are pretty awesome!
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">When is the deadline to sign up?</div>
+                        <div class="description">
+                            Hackathons are pretty awesome!
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">What if I don't have a team or an idea?</div>
+                        <div class="description">
+                            Hackathons are pretty awesome!
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">Where will I sleep?</div>
+                        <div class="description">
+                            Hackathons are pretty awesome!
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">What are the rules?</div>
+                        <div class="description">
+                            Hackathons are pretty awesome!
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">What are the prizes?</div>
+                        <div class="description">
+                            Hackathons are pretty awesome!
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">Is there a code of conduct?</div>
+                        <div class="description">
+                            Hackathons are pretty awesome!
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <div class="header">I have more questions!</div>
+                        <div class="description">
+                            Shoot us an email at organizers@ivoryhacks.com!
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script>$('#faqs').height(Math.max($('#faqs .layer2').height(), $('#faqs').height()));</script>
