challenge desc added

--- a/views/challenges.html
+++ b/views/challenges.html
@@ -5,15 +5,30 @@
         <div class="ui centered grid">
             <div class="twelve wide tablet five wide computer column">
                 <h2>Beginner's Challenge</h2>
+                <h3>Ivory Hacks has a title challenge aimed specifically at Freshman and Sophomore
+                    programmers who have attended less than three Hackathons.
+                    We will provide introductory classes on the latest Hackathon Tools and Code
+                    Stacks. We have publicly available starting repos and we will provide project
+                    advisors to serve as mentors and clients. </h3>
             </div>
 
             <div class="twelve wide tablet five wide computer column">
                 <h2>Three Tophat Challenge</h2>
+                <h3>Our Three Hat Challenge: Pull a frontend, backend and topic from top hats;
+                Repeat 3 times; Select one of the combinations.</h3>
+                <h2>GOOD LUCK!</h2>
+
             </div>
 
             <div class="twelve wide tablet five wide computer column">
                 <h2>Ten Buzzword Challenge</h2>
-                <h3>Here is some description of the ten buzzword challenge. This should be a couple lines long.</h3>
+                <h3>No good software is complete without creative packaging. From Scalable
+                Collaboration tools that Leverage the Power of the Cloud to Cross-Platform
+                Mobile Solutions that use Big Data to increase Synergy, what we all actually want
+                out of software is to sound cool describing it.</h3><h3>
+                All entries must be compatible with at least 10 of our preapproved list of
+                overused, misunderstood, inconceivable, shinny, technology buzzwords.</h3>
+
             </div>
         </div>
     </div>
